# OOP_PROJECT

./: AddEventCommand.cpp  AddEventCommand.h  AddVolunteerCommand.cpp  AddVolunteerCommand.h  BaseRepository.h  CMakeLists.txt  CSVEventRepository.cpp  CSVEventRepository.h  CSVVolunteerRepository.cpp  CSVVolunteerRepository.h  Controller.cpp  Controller.h  Event.cpp  Event.h  JSONEventRepository.cpp  JSONEventRepository.h  JSONVolunteerRepository.h  README.md  RemoveEventCommand.cpp  RemoveEventCommand.h  RemoveVolunteerCommand.cpp  RemoveVolunteerCommand.h  UpdateEventCommand.cpp  UpdateEventCommand.h  UpdateVolunteerCommand.cpp  UpdateVolunteerCommand.h  Volunteer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tests.cpp
Controller/: Controller.cpp  Controller.h
Model/: Volunteer.cpp
Repository/CSV/: CSVEventRepository.h  CSVVolunteerRepository.h
Repository/JSON/: JSONEventRepository.cpp  JSONEventRepository.h  JSONVolunteerRepository.cpp  JSONVolunteerRepository.h
core/Command/: AddEventCommand.h  AddVolunteerCommand.h  Command.h  RemoveEventCommand.h  RemoveVolunteerCommand.cpp  RemoveVolunteerCommand.h  UpdateEventCommand.cpp  UpdateEventCommand.h  UpdateVolunteerCommand.h
tests/: tests.cpp
ui/: main.cpp  mainwindow.h  mainwindow.ui
